Fix image jumping in instagram gallery

--- a/css/instagram.css
+++ b/css/instagram.css
@@ -9,6 +9,7 @@
   font-weight: 500;
   font-size: 28px;
   color: var(--main-text-color);
+  z-index: 10;
 }
 
 .instagram-gallery-button-prev {
@@ -26,7 +27,17 @@
   padding-left: 30px;
   padding-right: 30px;
 }
-
+.instagram-gallery-item {
+  position: relative;
+  padding-bottom: 100%;
+}
+.instagram-gallery-item-img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
 .fade {
   animation-name: fade;
   animation-duration: 1.5s;
